markdown/1.x/en/api/ff-paging-dropdown.api.md
## `ff-paging-dropdown`
___
### Properties
| Name | Description |
| ---- | ----------- |
| **items**&nbsp;(Object) (default:empty) | The paging data from FACT-Finder. |
| **show-selected**&nbsp;(Boolean) |  If this attribute is present, regardless of its value, the currently selected paging element is shown in the drop down container. |
| **collapse-onblur**&nbsp;(Boolean) |  If this attribute is present, regardless of its value, the element is automatically closed when it loses focus. |
| **opened**&nbsp;(Boolean) (default: false) | Indicates if this element is opened by default or not. |

### Events
| Name | Description |
| ---- | ----------- |
| **show()** |  ... |
| **hide()** |  ... |
| **toggle(forcehide?: boolean)**| ... |

### Events
| Name | Description |
| ---- | ----------- |
| **dom-updated** | This event is triggered when the element has received new data and the template for this element and all sub elements have been punched out.|
